--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,11 @@
-
+@import "tailwindcss";
+@import 'animate.css';
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 
 :root {
   --radius: 0.625rem;
@@ -123,3 +122,4 @@
     @apply bg-background text-foreground;
   }
 }
+
